--- a/int_resources/css/general.css
+++ b/int_resources/css/general.css
@@ -30,16 +30,16 @@
     
     --wrapperColor1:#D4DFE5;        /* Main content box shadow color 1 */
     
-    --bg1:#FFFFFF;                  /* Background-color 1 */
-    --bg2:#FBFBFB;                  /* Background-color 2 */
-    --bg3:#F9F9F9;                  /* Background-color 3 */
-    --bg4:#F6F6F6;                  /* Background-color 4 */
-    --bg5:#DDE6EA;                  /* Background-color 5 */
-    --bg5b:#ECECEC;                 /* Background-color 5b */
-    --bg6:rgb(248,250,254,0.92);    /* Background-color 6 */
+    --shade1:#FFFFFF;                   /* Background-color 1 */
+    --shade2:#F9F9F9;                   /* Background-color 3 */
+    --shade3:rgb(248,250,254,0.92);     /* Background-color 6 */
+    --shade4:#ECECEC;                   /* Background-color 5b */
+    --shade5:#DDE6EA;                   /* Background-color 5 */
+    --shade6:#D6D6D6;                   /* Background-color 5 */
+
     
     --txt1:#222;                    /* Text color 1 */    
-    --txt2:#F4F4F4;                 /* Text color 2 */
+    --txt2:#FAFAFA;                 /* Text color 2 */
     --txt-faded:#444;               /* Text faded color 1 */
     --txt-faded2:#6A6A6A;           /* Text faded color 2 */
     --txt-faded3:#919191;           /* Text faded color 3 */
@@ -64,15 +64,15 @@
     
     --wrapperColor1:#23292A;
     
-    --bg1:#212527;                  /* Background-color 1 */
-    --bg2:#1E2223;                  /* Background-color 2 */
-    --bg3:#1B1E1F;                  /* Background-color 3 */
-    --bg4:#18191A;                  /* Background-color 4 */
-    --bg5:#343738;                  /* Background-color 5 */
-    --bg5b:#151718;                 /* Background-color 5b */
-    --bg6:rgb(17,19,22,0.95);       /* Background-color 6 */    
+    --shade1:#212527;               /* Background-color 1 */
+    --shade2:#1B1E1F;               /* Background-color 3 */
+    --shade3:rgb(17,19,22,0.95);    /* Background-color 6 */ 
+    --shade4:#151718;               /* Background-color 5b */
+    --shade5:#343738;               /* Background-color 5 */
+    --shade6:#3B3B42;                   /* Background-color 5 */
+   
     
-    --txt1:#F4F4F4;                 /* Text color 1 */    
+    --txt1:#FAFAFA;                 /* Text color 1 */    
     --txt2:#222;                    /* Text color 2 */
     --txt-faded:#D5D5D5;            /* Text faded color 1 */
     --txt-faded2:#CFCFCF;           /* Text faded color 2 */
@@ -177,7 +177,7 @@ body{
     width:100%;
     max-width:100vw;
     
-    background-color:var(--bg3);
+    background-color:var(--shade2);
     overflow-x:hidden;
 }
 
@@ -279,9 +279,10 @@ h6{
     /* Wrapper - change body content margins */
 
 .wrapper{
-    max-width:calc(1200px - (var(--wrapperPadding1) * 2));
+    max-width:1440px;
     padding:0 var(--wrapperPadding1);
     margin:0 auto;
+    box-sizing:border-box;
 }
 
 .wrapper2{          /* Add this class to existing paernt content */
@@ -290,7 +291,6 @@ h6{
 
 @media screen and (max-width:768px){
     .wrapper{
-        max-width:calc(1200px - (var(--wrapperPadding2) * 2));
         padding:0 var(--wrapperPadding2);
     }
 }
@@ -300,7 +300,7 @@ h6{
 #scrolltop{
     width:45px;
     height:45px;
-    background-color:var(--bg3);
+    background-color:var(--shade2);
     position:fixed;
     bottom:-100px;
     right:30px;
@@ -362,14 +362,14 @@ nav{
     padding:0 var(--wrapperPadding1);
 }
 
-nav .wrapper{
+.nav-wrapper{
     margin-top:var(--wrapperPadding1);
     padding:var(--wrapperPadding1);
     position:relative;
     display:flex;
     justify-content:space-between;
 
-    background-color:var(--bg6);
+    background-color:var(--shade3);
     box-shadow:var(--box-shadow1) var(--wrapperColor1), var(--box-shadow2) var(--wrapperColor1);
     border-radius:var(--wrapperRadius1);
     transition:0.15s;
@@ -379,10 +379,24 @@ nav .wrapper{
         /* Nav Logo */
         
 .nav-logo svg{
-    width:200px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+        
+.nav-logo svg{
+    width:175px;
+}
+
+.nav-logo svg *{
+    stroke-width:0;
 }
 
 .nav-logo svg .cls-1{
+    fill:var(--txt-faded);
+}
+
+.dark-mode .nav-logo svg .cls-1{
     fill:var(--txt1);
 }
 
@@ -393,10 +407,8 @@ nav .wrapper{
         /* Navbar */
 
 .navbar{
-    min-height:100%;
-    min-width:300px;
+    width:300px;
     display:flex;
-    border:solid 1px black;
 }
 
 .navbar-arrow{
@@ -406,12 +418,16 @@ nav .wrapper{
 }
 
 .navbar-arrow svg{
-    width:30px;
+    width:32px;
+    padding:6px 0;
+    margin-right:4px;
     fill:var(--txt1);
     transition:0.15s;
 }
 
 .navbar-arrow:hover svg{
+    padding:12px 0 0 0;
+    
     fill:var(--color1);
 }
 
@@ -441,6 +457,7 @@ nav .wrapper{
     position:relative;
     top:0;
     left:0;
+    font-size:20px;
     text-align:center;
     transition:0.1s;
 }
@@ -479,9 +496,21 @@ nav .wrapper{
         padding:0 var(--wrapperPadding2);
     }
     
-    nav .wrapper{
+    .nav-wrapper{
         margin-top:var(--wrapperPadding2);
         padding:var(--wrapperPadding2);
+    }
+
+    .nav-logo svg{
+        width:150px;
+    }    
+
+    .navbar{
+        width:min(260px, 100%);
+    }    
+
+    .navbar-arrow svg{
+        padding:0 2px;
     }
     
 }
@@ -492,21 +521,29 @@ nav .wrapper{
         padding:0;
     }
 
-    nav .wrapper{
+    .nav-wrapper{
         margin:0;
         border-radius:0;
+
+        flex-direction:column;
+        align-items:center;
+        gap:var(--wrapperPadding2);
     }
     
 }
 
+@media screen and (width <= 320px){
 
+    .nav-page-title{
+        font-size:18px;
+    }
 
+    .navbar-arrow svg{
+        width:28px;
+        padding:0;
+    }
 
-
-
-
-
-
+}
 
     /* Footer */
 
@@ -519,7 +556,7 @@ footer .wrapper{
     padding:var(--wrapperPadding1);
     position:relative;
 
-    background-color:var(--bg6);
+    background-color:var(--shade3);
     box-shadow:var(--box-shadow1) var(--wrapperColor1), var(--box-shadow2) var(--wrapperColor1);
     border-radius:var(--wrapperRadius1);
     transition:0.15s;
@@ -543,10 +580,18 @@ footer .wrapper{
 }
 
 .brand-logo svg{
-    width:min(35vw, 200px);
+    width:min(35vw, 175px);
+}
+
+.brand-logo svg *{
+    stroke-width:0;
 }
 
 .brand-logo svg .cls-1{
+    fill:var(--txt-faded);
+}
+
+.dark-mode .brand-logo svg .cls-1{
     fill:var(--txt1);
 }
 
@@ -567,8 +612,12 @@ footer .wrapper{
     display:flex;
     align-items:center;
     justify-content:center;
-    box-shadow:0 0 0 2px var(--txt1);
+    box-shadow:0 0 0 2px var(--txt-faded2);
     border-radius:var(--radius2);
+}
+
+.dark-mode .socials a{
+    box-shadow:0 0 0 2px var(--txt1);
 }
 
 .socials a:hover{
@@ -577,12 +626,17 @@ footer .wrapper{
 
 .socials svg{
     height:70%;
-    fill:var(--txt1);
+    fill:var(--txt-faded2);
     transition:0.15s;
+}
+
+.dark-mode .socials svg{
+    fill:var(--txt1);
 }
 
 .socials a:hover svg{
     height:90%;
+    fill:var(--color1);
 }
 
         /* Footer - credits */
@@ -597,7 +651,6 @@ footer .wrapper{
     color:var(--txt1);
     font-size:13px;
     opacity:0.7;
-    border-top:1px solid var(--txt1);
     padding-top:5px;
     transition:0.15s;
 }
@@ -621,6 +674,7 @@ footer .wrapper{
 
     .credits{
         right:var(--wrapperPadding2);
+        bottom:3px;
     }
     
     .credits a{
@@ -658,6 +712,7 @@ footer .wrapper{
     .credits{
         width:100%;
         position:absolute;
+        bottom:5px;
         right:50%;
         transform:translate(50%, 0);
         text-align:center;
@@ -721,7 +776,7 @@ footer .wrapper{
 }
 
 :root{
-    --gradBgWidth: calc(100% / 6);
+    --gradBgWidth: calc(100% / 11);
 }
 
 .main-bg-grad{
@@ -735,10 +790,12 @@ footer .wrapper{
     
     /* Image has better perf. than CSS gradient */
     background: linear-gradient(to right, 
-        var(--color1a) calc(var(--gradBgWidth) * 1),
-        var(--color1)  calc(var(--gradBgWidth) * 2),
-        var(--color2a) calc(var(--gradBgWidth) * 5),
-        var(--color1a) calc(var(--gradBgWidth) * 6));
+        var(--ucp1a) calc(var(--gradBgWidth) * 1),
+        var(--ucp1)  calc(var(--gradBgWidth) * 3),
+        var(--ucp3)  calc(var(--gradBgWidth) * 5),
+        var(--ucp2)  calc(var(--gradBgWidth) * 7),
+        var(--ucp2a) calc(var(--gradBgWidth) * 9),
+        var(--ucp1a) calc(var(--gradBgWidth) * 11));
 
     background-size:50%;
     /* The rest is in script-pack JS */
@@ -748,24 +805,87 @@ footer .wrapper{
 
 main{
     padding:0 var(--wrapperPadding1);
-    background-color:var(--bg1);
+    background-color:var(--shade1);
     transition:0.15s;
 }
 
-main > .wrapper{
+.main-wrapper{
     margin:var(--wrapperPadding1) auto;
     position:relative;
-    background-color:var(--bg6);
+    background-color:var(--shade3);
     border-radius:var(--wrapperRadius1);
     box-shadow:var(--box-shadow1) var(--wrapperColor1), var(--box-shadow2) var(--wrapperColor1);
     transition:0.15s;
 }
 
+.main-module-content{
+    flex:1;
+    min-height:min(60vh, 800px);
+    display:flex;
+    align-items:center;
+    flex-direction:column;
+}
+
+        /* Main Header */
+
+.main-header{
+    width:100%;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+
+.pdf-logo{
+    height:36px;
+    display:none;
+}
+
+.pdf-logo svg{
+    height:100%;
+}
+
+.pdf-logo svg .cls-1{
+    fill:var(--txt1);
+}
+
+.pdf-logo svg .cls-2{
+    fill:var(--color1);
+}
+
+.mh-title{
+    background:var(--ucp-grad2);
+    -webkit-background-clip:text;
+    background-clip:text;
+    -webkit-text-fill-color:transparent;
+    
+    font-family:font1-semibold;
+    font-size:56px;
+    filter:drop-shadow(0 0 1px var(--shade2));
+}
+
+.mh-brand{
+    font-family:cp-font1;
+    font-size:36px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         /* Main - media */
 
 @media screen and (min-height:1080px){
     /* Prevent the website from being too short to cover up the whole screen */
-    main > .wrapper{
+    .main-wrapper{
         min-height:calc(40vh);
     }
 }
@@ -784,105 +904,109 @@ main > .wrapper{
         padding:0;
     }
     
-    main > .wrapper{
+    .main-wrapper{
         border-radius:0;
     }
 
 }
 
-        /* Main-module */
+    /* PDF Button */
 
-.main-header{
-    width:100%;
-    margin-top:5px;
-    margin-bottom:var(--wrapperPadding1);
-    display:flex;
-    justify-content:center;
-}
-
-.main-header h2{
-    text-align:center;
-}
-
-.main-module-content{
-    flex:1;
-    min-height:min(100vh, 1200px);
-    padding-top:50px;
-    display:flex;
-    align-items:center;
-    flex-direction:column;;
-}
-
-.main-module-header{
-    width:100%;
+.pdf-btn{
+    height:50px;
+    padding:8px 12px;
+    box-sizing:border-box;
+    position:absolute;
+    top:var(--wrapperPadding1);
+    right:var(--wrapperPadding1);
     display:flex;
     justify-content:center;
     align-items:center;
+    gap:8px;
+
+    background-color:var(--shade1);
+    box-shadow:var(--box-shadow2) var(--ucp1);
+    border-radius:var(--radius1);
+    cursor:pointer;
+    transition:0.15s;
 }
 
-.main-module-header h3{
-    color:var(--color1);
-    text-shadow:0 0 1px black;
-    display:grid;
-    width:80%;
-    align-items:center;
-    text-align:center;
-    grid-template-columns: minmax(20px, 1fr) auto minmax(20px, 1fr);
-    grid-gap:15px;
-    padding-bottom:20px;
+.pdf-btn:hover{
+    box-shadow:var(--box-shadow3) var(--ucp1);
+}
+
+.pdf-btn p{
+    font-family:font1;
+    font-weight:800;
+}
+
+.pdf-btn svg{
+    height:100%;
+}
+
+.pdf-btn svg *{
+    stroke:var(--txt1);
+    stroke-width:8px;
+    transition:0.15s;
+}
+
+.pdf-btn:hover svg *{
+    stroke:var(--ucp1);
+}
+
+.pdf-btn .pdf-letter{
+    stroke-width:0;
+    fill:var(--txt1)
+}
+
+.pdf-btn:hover .pdf-letter{
+    fill:var(--ucp1);
+}
+
+    /* PDF Settings */
+
+
+@media print {
     
-}
+        /* PDF - General Settings */
+    
+    @page{ 
+        margin:0;
+        size:A4 landscape;
+    }
 
-.main-module-header h3:before,
-.main-module-header h3:after{
-    content:'';
-    border-top: 3px solid var(--color1);
-}
+    html, body{
+        height:100%;
+    }
+    
+    main{
+        height:100%;
+        display:flex;
+        align-items:center;
+    }
 
-        /* Main-module - media */
-
-@media screen and (max-width:1024px){
-
-    .main-module-content ul{
+    .main-wrapper{
         width:100%;
     }
-
-}
-
-@media screen and (max-width:768px){
     
-    .main-module{
-        flex-direction:column;
-        gap:60px;
+        /* PDF - Page Settings */
+    
+    .pdfNoPrint, footer, nav, #hidden-contents{
+        display:none;
     }
 
-    .main-module-content ul{
-        width:80%;
+            /* PDF - Main Header */
+
+    .pdf-logo{
+        display:block;
     }
 
-}
-
-@media screen and (max-width:440px){
-    
-    .main-module-content ul li{
-        height:38px;
-        flex:100%;
+    .mh-title{
+        font-size:42px;
     }
     
-    .main-module-header h3{
-        width:90%;
-    }
-
-}
-
-@media screen and (max-width:320px){
-    
-    .main-header{
-        margin-bottom:var(--wrapperPadding2);
-    }
-    
-    .main-module-header h3{
-        font-size:22px;
+    .mh-brand{
+        font-size:28px;
     }
 
 }
