Main page - Tile "fade-in" animation
Added an animation for the color palette tiles on the main page. When the user is close to the tile, it appears from the side and when the user scrolls further down, the tile hides (similar behavior to the Uverit Cookbook).

--- a/int_resources/css/general.css
+++ b/int_resources/css/general.css
@@ -159,8 +159,8 @@
     background:var(--color1) !important;
 }
 
-/* remove transition on page load */
-.remove-transition *{
+/* Remove transition on page load */
+.remove-transition *:not(.tile){
     transition:none !important;
 }
 
