--- a/int_resources/css/color-layout.css
+++ b/int_resources/css/color-layout.css
@@ -4,7 +4,7 @@
     /* Layout List */
 
 .layout-list{
-    padding:var(--wrapperPadding1);
+    padding:8px 12px;
     position:absolute;
     top:var(--wrapperPadding1);
     left:var(--wrapperPadding1);
@@ -19,40 +19,103 @@
     z-index:1000;
 }
 
-.layout-list-inner{
-    height:0;
-    overflow:hidden;
+.layout-list:before{
+    content:"";
+    width:100%;
+    height:100%;
+    box-sizing:border-box;
+    position:absolute;
+    top:0;
+    left:0;
+
+    border-radius:var(--radius1);
+    border:solid 2px transparent;
+    background-image:linear-gradient(var(--shade1), var(--shade1)), var(--ucp-grad2);
+    background-origin:border-box;
+    background-clip:content-box, border-box;
+    z-index:-1;
 }
 
+        /* Layout List - Select */
 
-.open-list{
-    height:auto;
-}
-
-
-
-
-.layout-list > *{
+.ll-select{
+    width:200px;
+    height:25px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
     cursor:pointer;
 }
 
+.current-item{
+    color:var(--txt1);
+}
 
+.ll-select-arrow{
+    width:20px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
 
+.ll-select svg{
+    width:100%;
+    fill:var(--txt1);
+    transition:0.1s;
+}
 
+.open-list .ll-select svg{
+    transform:rotate(180deg);
+}
 
+.ll-select:hover svg,
+.open-list .ll-select svg{
+    fill:var(--ucp1);
+}
 
+        /* Layout List - Inner List */
 
+.layout-list-inner{
+    height:0;
+    overflow:hidden;
+    display:flex;
+    flex-direction:column;
+    gap:2px;
+}
 
+.open-list .layout-list-inner{
+    height:auto;
+    padding-top:4px;
+}
 
+.ll-border{
+    width:100%;
+    height:2px;
+    background-image:var(--ucp-grad2);
+    border-radius:100px;
+}
 
+.open-list .ll-border{
+    margin-bottom:4px;
+}
 
+.layout-btn{
+    cursor:pointer;
+    transition:0.1s;
+}
 
+.layout-btn:hover{
+    color:var(--ucp1);
+}
 
+.current-layout{
+    color:var(--ucp2);
+    border-right:solid 2px var(--ucp2);
+}
 
-
-
-
-
+.current-layout:hover{
+    color:var(--ucp2);
+}
 
     /* Layouts */
 
@@ -60,12 +123,12 @@
     width:100%;
     height:0;
     position:relative;
-    transition:0.25s;
+    transition:0.4s;
 }
 
 .layout{
     width:100%;
-    height:0;
+    height:500px;
     padding:var(--wrapperPadding1);
     box-sizing:border-box;
 
@@ -94,16 +157,6 @@
         left:0;
     }
 }
-
-
-
-
-
-
-
-
-
-
 
         /* Layout 0 - nav & footer */
 
